--- a/sample.apache.https.conf
+++ b/sample.apache.https.conf
@@ -1,4 +1,4 @@
-WSGIDaemonProcess gdpr display-name=%{GLOBAL} python-home=/home/gdpr/python-venv:/home/gdpr/python-venv/lib/python3.5/site-packages python-path=/home/gdpr/gdpr-registry-app
+WSGIDaemonProcess gdpr display-name=%{GLOBAL} python-home=/home/gdpr/python-venv python-path=/home/gdpr/gdpr-registry-app
 
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
