--- a/sample.apache.security.conf
+++ b/sample.apache.security.conf
@@ -1,7 +1,7 @@
 ServerTokens Prod
 ServerSignature Off
 SSLCipherSuite EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
-SSLProtocol All -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
+SSLProtocol All -SSLv3 -TLSv1 -TLSv1.1
 SSLHonorCipherOrder On
 Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
 Header always set X-Frame-Options DENY
